# palantir-foundry-rules-cli

./: .gitignore  README.md  build.gradle  ci.yml  gradle.properties  gradlew  gradlew.bat  package.json  proposal-cli-v2.ts  pyproject.toml  settings.gradle  templateConfig.json  tsconfig.json
conda_recipe/: meta.yaml
config/: demo-product.json  example-workflow.json  rule-input-schema.json  rule2.json  title-cure.json  workflow-schema.json
functions-typescript/: .eslintrc.json  .gitignore  README.md  build.gradle  functions.json  jest.config.js  package-lock.json  package.json  resources.json
functions-typescript/src/: index.ts  tsconfig.json
prompts/templates/: numeric-range.json  string-equals.json  string-or.json
samples/: complex-and-filter.json  complex-price-risk.json  medium-categories.json  multi-value-filter.json  numeric-range-filter.json  simple-risk-high.json  simple-string-filter.json  title-cure-complex-and.json  title-cure-insurance.json  title-cure-liens.json
src/: index.ts  proposal-cli-v2.ts  setup.py
src/foundry_rules/: __init__.py  api.py  cli.py  compression.py  sdk.py
src/v2/: compression.ts  index.ts
tests/: __init__.py  compression.test.ts  config-loader.test.ts  proposal-crud.test.ts  schema-validation.test.ts  templates.test.ts  test_compression.py  test_config.py  test_sdk.py  test_templates.py  test_validation.py  validation.test.ts
tests/fixtures/: sample-rule-logic.json  valid-config.json
v2/: index.ts
v2/config/: index.ts  loader.ts  resolver.ts  types.ts
v2/templates/: index.ts  loader.ts
v2/validation/: index.ts  (+3 more)
(+20 files in other folders)
